<resources>
    <string name="app_name">secondexercise</string>
    <string name="hub">HUB</string>
    <string name="food">FOOD</string>
    <string name="todo">TODO</string>
    <string name="welcome_skip">Skip</string>
    <string name="welcome_title1">Welcome to</string>
    <string name="welcome_title2">FoodHub</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_in">Sign in</string>
    <string name="already_account">Already have an account?</string>
    <string name="start_email_phone">Start with email or phone</string>
    <string name="welcome_info">Your favourite foods delivered fast at your door.</string>
    <string name="sign_in_with">sign in with</string>
    <string name="descriptionVerifyCode">Please type the verification code sent to prelookstudio@gmail.com</string>
    <string name="textview">TextView</string>
</resources>