<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    android:backgroundTint="@null"
    tools:context=".features.welcome.Welcome">

    <ImageView
        android:id="@+id/welcome_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_bg" />

    <ImageView
        android:id="@+id/welcome_linear"
        android:layout_width="414dp"
        android:layout_height="855dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/linear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_skip"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:height="32dp"
        android:background="@drawable/btn_facebook"
        android:fontFamily="@font/sofia_pro"
        android:paddingLeft="4dp"
        android:paddingTop="0dp"
        android:paddingRight="4dp"
        android:text="@string/welcome_skip"
        android:textAllCaps="false"
        android:textColor="#FE724C"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="181dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_bold"
            android:shadowRadius="15"
            android:text="@string/welcome_title1"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/welcome_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_bold"
            android:shadowDy="5"
            android:text="@string/welcome_title2"
            android:textColor="@color/primary"
            android:textSize="45sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/welcome_info"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/sofia_pro"
        android:text="@string/welcome_info"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/welcome_bg"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:lineHeight="27dp" />

    <ImageView
        android:id="@+id/welcome_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome_bg"
        app:srcCompat="@drawable/border" />

    <TextView
        android:id="@+id/welcome_signinwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:width="75dp"
        android:fontFamily="@font/sofia_pro"
        android:text="@string/sign_in_with"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome_bg" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/welcome_btn_facebook"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="139.26dp"
                android:height="54dp"
                android:background="@drawable/btn_facebook"
                android:backgroundTintMode="add"
                android:contextClickable="false"
                android:drawableLeft="@drawable/ic_fb_icon"
                android:fontFamily="@font/sofia_pro_regular"
                android:hapticFeedbackEnabled="false"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@color/white"
                app:iconGravity="start"
                app:iconPadding="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/welcome_btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:width="139.26dp"
                android:height="54dp"
                android:background="@drawable/btn_facebook"
                android:drawableLeft="@drawable/ic_google_icon"
                android:fontFamily="@font/sofia_pro_regular"
                android:pointerIcon="no_drop"
                android:shadowDx="10"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:backgroundTint="@color/white"
                app:iconPadding="0dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_startemailphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="54dp"
            android:background="@drawable/btn_outline"
            android:fontFamily="@font/sofia_pro"
            android:text="@string/start_email_phone"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            app:iconSize="5dp"
            app:iconTintMode="multiply" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/welcome_haveaccount"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sofia_pro"
            android:text="@string/already_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/welcome_signin"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/sofia_pro"
            android:outlineProvider="none"
            android:singleLine="false"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>