<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FE724C"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="304dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_logo_app"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="246dp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="306dp"
        android:text="@string/food"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="306dp"
        android:layout_toEndOf="@+id/text1"
        android:text="@string/hub"
        android:textAlignment="textStart"
        android:textColor="#707070"
        android:textSize="40sp" />

    <ProgressBar
        android:id="@+id/loadingIntoApp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:progress="0"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:scaleY="4"
        android:layout_marginBottom="249dp" />
</RelativeLayout>